--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <input type="radio" name="option">New Delhi
     <br>
     <input type="radio" name="option">Mumbai
-    <blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+    <blockquote id="cite">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 
     <script type="text/javascript" src="./script.js">
 </script>
